--- a/build.gradle
+++ b/build.gradle
@@ -73,7 +73,9 @@ dependencies {
 	modImplementation("net.fabricmc.fabric-api:fabric-api:${fabric_api_version}")
 
 	// Create - dependencies are added transitively
-	modImplementation("com.simibubi.create:create-fabric-${minecraft_version}:${create_version}")
+	modImplementation("maven.modrinth:create-fabric-dme-edition:${create_version}")
+    modApi("io.github.fabricators_of_create.Porting-Lib:Porting-Lib:${port_lib_version}+1.20-entity-refactor")
+
 
 
 	// Create Dragon Lib
